--- a/aaai20/intro.tex
+++ b/aaai20/intro.tex
@@ -1,1 +1,15 @@
 \section{Introduction}
+Given a graph $G$ and $k$ agents, each of which is associated with an initial vertex and a goal vertex of $G$, \emph{Multi-Agent Pathfinding (MAPF)} is the problem of finding $k$ conflict-free paths which connect the initial vertex with the goal vertex of each agent.
+
+There are a number of applications of MAPF, which range from industrial applications, in which the increase in automation may promote the need for dozens---perhaps hundreds---of robots navigating in indoor environments (e.g., warehouses), to aviation, underground mining, and multi-agent videogames \cite{WangB08}.
+
+Solving MAPF optimally is NP-complete \cite{YuL13,MaK17}. When viewed as a standard AI search problem, it is straightforward to notice that the branching factor of MAPF is exponential on the number of agents since at each moment in time each agent can perform a number of actions, relatively fixed. It is not surprising, then, that building algorithms that scale reasonably well with the number of agents has been challenging.
+
+For its most simple version, that is, MAPF over 4-connected grids, a number of approaches have been proposed, but two classes of solvers are the most relevant for the research we report here. A first class, is search-based solvers (e.g., \nbcite{Standley10}), which use heuristic search as the main component.
+A state-of-the-art search-based solver is Conflict-Based Search (CBS) \cite{SharonSFS12,FelnerLB00KK18,LiFB0K19}, which uses A* at its core. A second class, is compilation-based solvers; for example which translate MAPF to Satisfiability Testing (SAT) (e.g., \nbcite{SurynekFSB16}; \nbcite{BartakZSBS17}; \nbcite{BartakS19}), and Answer-Set Programming \cite{ErdemKOS13,GebserOOS18}.
+
+When seeking for an optimal solution for MAPF, different objective functions can be considered. Under \emph{sum-of-costs}, the most popular variant of MAPF, the objective is to minimize the moves agents perform before stopping at the goal. % This is variant is used in state-of-the-art solvers like CBS.
+
+In this paper, we continue to explore the potential of ASP solvers for MAPF, and propose the first compilation that solves MAPF optimally under the sum-of-costs assumption. A second contribution consists of proposing the first compilation from MAPF to ASP that grows linearly with the number of agents, unlike existing compilations to ASP that are quadratic on the number of agents. In addition, we propose an optimization which uses information drawn from a search algorithm that is run as a preprocessing step to make the encoding more compact.
+
+In our empirical evaluation, we evaluate our approach on synthetic square grids and warehouse grids with an increasing number of agents. We compare against MDD-SAT~\cite{SurynekFSB16}, a representative of the state of the art in SAT-based MAPF, and iCBS-h~\cite{FelnerLB00KK18}, a representative of the state-of-the-art in search-based MAPF. We observe that our approach outperforms both MDD-SAT and iCBS-h when congestion is high. Specifically, our approach has a greater coverage as the number of agents increase. We conclude that Answer-Set Programming is a viable approach to solving MAPF problems.
