--- a/aaai20/ref.bib
+++ b/aaai20/ref.bib
@@ -139,6 +139,7 @@
 @string{IJCAI11 = "\longshort{\Proceedings \ofthe 22nd \International Joint \Conference on \AI{}}{IJCAI}"}
 @string{IJCAI15 = "\longshort{\Proceedings \ofthe 24th \International Joint \Conference on \AI{}}{IJCAI}"}
 @string{IJCAI16 = "\longshort{\Proceedings \ofthe 25th \International Joint \Conference on \AI{}}{IJCAI}"}
+@string{IJCAI19 = "\longshort{\Proceedings \ofthe 28th \International Joint \Conference on \AI{}}{IJCAI}"}
 
 @string{ISWC06 = "\longshort{\Proceedings \ofthe 5th \International Semantic Web \Conference}{ISWC}"}
 
@@ -4430,5 +4431,25 @@ isbn="978-3-540-68552-4"
   doi       = {10.1109/ICTAI.2017.00147},
   timestamp = {Sat, 24 Nov 2018 11:59:51 +0100},
   biburl    = {https://dblp.org/rec/bib/conf/ictai/BartakZSBS17},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{LiFB0K19,
+  author    = {Jiaoyang Li and
+               Ariel Felner and
+               Eli Boyarski and
+               Hang Ma and
+               Sven Koenig},
+  editor    = {Sarit Kraus},
+  title     = {Improved Heuristics for Multi-Agent Path Finding with Conflict-Based
+               Search},
+  booktitle = IJCAI19,
+  pages     = {442--449},
+  publisher = {ijcai.org},
+  year      = {2019},
+  url       = {https://doi.org/10.24963/ijcai.2019/63},
+  doi       = {10.24963/ijcai.2019/63},
+  timestamp = {Tue, 20 Aug 2019 16:19:21 +0200},
+  biburl    = {https://dblp.org/rec/bib/conf/ijcai/LiFB0K19},
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
