--- a/aaai20/ref.bib
+++ b/aaai20/ref.bib
@@ -4453,3 +4453,11 @@ isbn="978-3-540-68552-4"
   biburl    = {https://dblp.org/rec/bib/conf/ijcai/LiFB0K19},
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
+
+@article{GebserKKS14,
+  author = {Gebser, Martin and Kaminski, Roland and Kaufmann, Benjamin and Schaub, Torsten},
+  title = {Clingo = {ASP} + Control: Preliminary Report},
+  journal = {CoRR},
+  volume = {abs/1405.3694},
+  year = {2014}
+}
